8 спринт, версия 3. Переработана логика тестов. Добавлен абстракный класс TaskManagetTest, в который вынесены общие тесты для InMemoryTaskManagerTest и FileBackedTaskManagerTest.