@@ -7,6 +7,8 @@ import com.yandex.sprint4.model.TaskStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 
@@ -14,40 +16,60 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class InMemoryHistoryManagerTest {
     InMemoryHistoryManager inMemoryHistoryManager;
+
     Task task1;
     Task task2;
+    Task task3;
 
     @BeforeEach
     public void beforeEach() {
         inMemoryHistoryManager = new InMemoryHistoryManager();
 
-        task1 = new Task("1", "2", TaskStatus.NEW);
-        task2 = new Task("2", "3", TaskStatus.NEW);
+        task1 = new Task("Задача 1", "Описание задачи 1", TaskStatus.NEW,
+                Duration.ofHours(20), LocalDateTime.of(2024, 10, 12, 13, 24));
+        task2 = new Task("Задача 2", "Описание задачи 2", TaskStatus.NEW,
+                Duration.ofHours(21), LocalDateTime.of(2024, 1, 12, 13, 24));
+        task3 = new Task("Задача 3", "Описание задачи 3", TaskStatus.NEW,
+                Duration.ofHours(22), LocalDateTime.of(2024, 8, 12, 13, 24));
 
         task1.setId(1);
-        task1.setId(2);
+        task2.setId(2);
+        task3.setId(3);
 
         inMemoryHistoryManager.add(task1);
         inMemoryHistoryManager.add(task2);
-        inMemoryHistoryManager.add(task1);
+        inMemoryHistoryManager.add(task3);
     }
 
     @Test
     public void getHistoryTest() {
-        assertEquals("2", inMemoryHistoryManager.getHistory().get(0).getName());
-        assertEquals("1", inMemoryHistoryManager.getHistory().get(1).getName());
+        assertEquals("Задача 1", inMemoryHistoryManager.getHistory().get(0).getName());
+        assertEquals("Задача 2", inMemoryHistoryManager.getHistory().get(1).getName());
     }
 
     @Test
-    public void getHistoryTestAfterRemove() {
+    public void getHistoryAfterRemoveFirstTest() {
         inMemoryHistoryManager.remove(task1.getId());
-        assertEquals("2", inMemoryHistoryManager.getHistory().get(0).getName());
+        assertEquals("Задача 2", inMemoryHistoryManager.getHistory().getFirst().getName());
+    }
+
+    @Test
+    public void getHistoryAfterRemoveMiddleTest() {
+        inMemoryHistoryManager.remove(task2.getId());
+        assertEquals("Задача 3", inMemoryHistoryManager.getHistory().get(1).getName());
+    }
+
+    @Test
+    public void getHistoryAfterRemoveLastTest() {
+        inMemoryHistoryManager.remove(task3.getId());
+        assertEquals("Задача 2", inMemoryHistoryManager.getHistory().getLast().getName());
     }
 
     @Test
     public void getHistoryTestAfterRemoveAll() {
         inMemoryHistoryManager.remove(task1.getId());
         inMemoryHistoryManager.remove(task2.getId());
+        inMemoryHistoryManager.remove(task3.getId());
         assertEquals(new ArrayList<>(), inMemoryHistoryManager.getHistory());
     }
 
